revert: "chore: turns out gateway works just fine"
* turns out i am wrong, calibre-web wants whatever nginx-ingress does
* also lets me use more than one domain

--- a/kubernetes/apps/network/cloudflare-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/network/cloudflare-dns/app/helmrelease.yaml
@@ -54,9 +54,11 @@ spec:
       - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
       - --crd-source-kind=DNSEndpoint
       - --gateway-name=external
+      - --ignore-ingress-tls-spec
+      - --ingress-class=external
     triggerLoopOnEvent: true
     policy: sync
-    sources: ["crd", "gateway-httproute"]
+    sources: ["crd", "gateway-httproute", "ingress"]
     txtOwnerId: default
     txtPrefix: k8s.
     domainFilters: ["goyangi.cloud", "solanyn.dev"]
