fix: correct ks path

--- a/kubernetes/apps/istio-system/kustomization.yaml
+++ b/kubernetes/apps/istio-system/kustomization.yaml
@@ -6,5 +6,5 @@ components:
   - ../../components/common
 resources:
   - ./istio/ks.yaml
-  - ./istio/ingressgateway/ks.yaml
-  - ./istio/external-authorization/ks.yaml
+  - ./ingressgateway/ks.yaml
+  - ./external-authorization/ks.yaml
