--- a/kubernetes/apps/istio-system/ingressgateway/app/helmrelease.yaml
+++ b/kubernetes/apps/istio-system/ingressgateway/app/helmrelease.yaml
@@ -18,7 +18,7 @@ spec:
   interval: 1h
   chart:
     spec:
-      chart: base
+      chart: istio-ingress
       version: 1.24.3
       sourceRef:
         kind: HelmRepository
