feat: remove machine-learning namespace, move label-studio to default, undeploy feast and mlflow
* use kubeflow platform later

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -20,6 +20,7 @@ resources:
   - ./jellyfin/ks.yaml
   - ./jellyseerr/ks.yaml
   - ./kopia/ks.yaml
+  - ./label-studio/ks.yaml
   - ./lidarr/ks.yaml
   - ./maintainerr/ks.yaml
   - ./miniflux/ks.yaml
