--- a/kubernetes/apps/default/label-studio/ks.yaml
+++ b/kubernetes/apps/default/label-studio/ks.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app label-studio
-  namespace: &namespace machine-learning
+  namespace: &namespace default
 spec:
   commonMetadata:
     labels:
@@ -17,7 +17,7 @@ spec:
     - name: minio
       namespace: default
   interval: 1h
-  path: ./kubernetes/apps/machine-learning/label-studio/app
+  path: ./kubernetes/apps/default/label-studio/app
   prune: false
   postBuild:
     substitute:
