--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -31,6 +31,7 @@ spec:
               TZ: Australia/Sydney
               HASS_HTTP_TRUSTED_PROXY_1: 192.168.1.0/24
               HASS_HTTP_TRUSTED_PROXY_2: 10.42.0.0/16
+              HOME_ASSISTANT_EXTERNAL_URL: https://hass.goyangi.cloud
             envFrom:
               - secretRef:
                   name: home-assistant-secret
