--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -36,6 +36,7 @@ resources:
   - ./sonarr/ks.yaml
   - ./tautulli/ks.yaml
   - ./thelounge/ks.yaml
+  - ./webhook/ks.yaml
   - ./your-spotify/ks.yaml
   - ./zigbee/ks.yaml
   - ./zwave/ks.yaml
