chore: fix field

--- a/kubernetes/apps/cert-manager/cert-manager/app/helmrelease.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/helmrelease.yaml
@@ -11,7 +11,7 @@ spec:
     operation: copy
   ref:
     tag: v1.17.1
-  chart: oci://quay.io/jetstack/charts/cert-manager
+  url: oci://quay.io/jetstack/charts/cert-manager
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
