--- a/.github/workflows/sync-kubeflow.yaml
+++ b/.github/workflows/sync-kubeflow.yaml
@@ -1,8 +1,16 @@
 name: Sync Kubeflow Manifests
 
 on:
+  workflow_call:
+    secrets:
+      BOT_APP_ID:
+        description: The App ID of the GitHub App
+        required: true
+      BOT_APP_PRIVATE_KEY:
+        description: The private key of the GitHub App
+        required: true
   schedule:
-    - cron: '0 0 * * *'  # Daily at 00:00 UTC
+    - cron: '0 0 * * *'
   workflow_dispatch:
     inputs:
       upstream_ref:
@@ -177,7 +185,7 @@ jobs:
       - name: Create branch and commit changes
         id: commit
         run: |
-          git config user.email "${BOT_APP_ID}+bot-goyangi[bot]@users.noreply.github.com"
+          git config user.email "1109230+bot-goyangi[bot]@users.noreply.github.com"
           git config user.name "bot-goyangi[bot]"
           BRANCH="kubeflow-sync-${{ needs.setup.outputs.upstream_ref }}-$(date +%s)"
           git checkout -b "$BRANCH"
@@ -197,9 +205,12 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
+          sign-commits: true
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ env.BRANCH }}
+          labels: kubeflow
           title: "Sync Kubeflow manifests from ${{ needs.setup.outputs.upstream_ref }}"
+          reviewers: solanyn
           body: |
             ## 📦 Synced Kubeflow Manifests
 
