--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -17,7 +17,7 @@
   ],
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   "suppressNotifications": ["prEditedNotification", "prIgnoreNotification"],
-  "ignorePaths": ["**/*.sops.*", "**/resources/**"],
+  "ignorePaths": ["**/*.sops.*", "**/resources/**", "**/kubeflow-system/platform/manifests/**"],
   "flux": {
     "fileMatch": [
       "(^|/)kubernetes/.+\\.ya?ml$"
