--- a/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
@@ -16,30 +16,19 @@ spec:
             action: "inject",
             apiKey: "{{.CROSS_SEED_API_KEY}}",
             delay: 30,
-            duplicateCategories: false,
-            flatLinking: false,
-            includeEpisodes: true,
             includeNonVideos: true,
             includeSingleEpisodes: true,
             linkCategory: "cross-seed",
             linkDirs: ["/media/downloads/torrents/complete/cross-seed"],
             linkType: "hardlink",
-            matchMode: "safe",
-            outputDir: "/config",
-            port: 80,
+            matchMode: "partial",
+            outputDir: "null",
+            port: Number(process.env.CROSS_SEED_PORT),
             qbittorrentUrl: "http://qbittorrent.default.svc.cluster.local",
-            radarr: ["http://radarr.default.svc.cluster.local/?apikey={{ .RADARR_API_KEY }}"],
             skipRecheck: true,
-            sonarr: ["http://sonarr.default.svc.cluster.local/?apikey={{ .SONARR_API_KEY }}"],
             torznab: [],
             useClientTorrents: true
           };
   dataFrom:
     - extract:
         key: cross-seed
-    - extract:
-        key: radarr
-    - extract:
-        key: sonarr
-    - extract:
-        key: prowlarr
