chore(atuin): switch to conradludgate image

--- a/kubernetes/apps/default/atuin/app/helmrelease.yaml
+++ b/kubernetes/apps/default/atuin/app/helmrelease.yaml
@@ -25,9 +25,13 @@ spec:
               repository: ghcr.io/conradludgate/atuin-server-sqlite
               tag: v18.4.0@sha256:2b89387bbf532b37c65c73aa8feebd52dd220d2bf392cd7f40d88a7b2e99d4c8
             env:
+              ATUIN_CONFIG_DIR: /config
+              ATUIN_DB_URI: sqlite:///config/atuin.db
+              ATUIN_HOST: 0.0.0.0
               ATUIN_PORT: &port 80
               ATUIN_OPEN_REGISTRATION: "true"
               TZ: Australia/Sydney
+            args: ["server", "start"]
             probes:
               liveness: &probes
                 enabled: true
