--- a/kubernetes/apps/default/cross-seed/app/helmrelease.yaml
+++ b/kubernetes/apps/default/cross-seed/app/helmrelease.yaml
@@ -27,6 +27,7 @@ spec:
               repository: ghcr.io/cross-seed/cross-seed
               tag: 6.11.2@sha256:0befc4ff8989f283319a20151271cc9dba99215b7c381e018fdf15702c785e3f
             env:
+              CROSS_SEED_PORT: &port 80
               TZ: Australia/Sydney
             args: ["daemon"]
             probes:
