--- a/.github/workflows/sync-kubeflow.yaml
+++ b/.github/workflows/sync-kubeflow.yaml
@@ -193,7 +193,7 @@ jobs:
           author: bot-goyangi[bot] <1109230+bot-goyangi[bot]@users.noreply.github.com>
           base: main
           branch-suffix: timestamp
-          branch: ${{ env.BRANCH }}
+          branch: kubeflow-sync-${{ needs.setup.outputs.upstream_ref }}
           labels: area/kubeflow
           title: "Sync Kubeflow manifests from ${{ needs.setup.outputs.upstream_ref }}"
           reviewers: solanyn
