--- a/.github/workflows/sync-kubeflow.yaml
+++ b/.github/workflows/sync-kubeflow.yaml
@@ -10,7 +10,6 @@ on:
         required: false
         default: 'v1.10.0'
 
-# Add necessary permissions
 permissions:
   contents: write
   pull-requests: write
@@ -168,9 +167,17 @@ jobs:
         if: always()
         run: rm -rf full-upstream
 
+      - name: Generate Token
+        uses: actions/create-github-app-token@3ff1caaa28b64c9cc276ce0a02e2ff584f3900c5 # v2
+        id: app-token
+        with:
+          app-id: "${{ secrets.BOT_APP_ID }}"
+          private-key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
+          token: "${{ steps.app-token.outputs.token }}"
           signoff: true
           sign-commits: true
           committer: bot-goyangi[bot] <1109230+bot-goyangi[bot]@users.noreply.github.com>
