--- a/kubernetes/apps/kubeflow-system/platform/manifests/patches/external-mariadb.yaml
+++ b/kubernetes/apps/kubeflow-system/platform/manifests/patches/external-mariadb.yaml
@@ -44,7 +44,7 @@ spec:
             - name: MYSQL_PORT
               value: "3306"
             - name: MYSQL_DATABASE
-              value: metadb
+              value: metadata-db
             - name: MYSQL_USER
               valueFrom:
                 secretKeyRef:
