--- a/kubernetes/apps/kubeflow-system/platform/manifests/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow-system/platform/manifests/externalsecret.yaml
@@ -1,5 +1,5 @@
-# yaml-language-server: $schema=https://kubernetes-schemas.solanyn.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
+# yaml-language-server: $schema=https://kubernetes-schemas.solanyn.dev/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: mlpipeline-db-credentials
@@ -18,7 +18,7 @@ spec:
     - extract:
         key: kubeflow
 ---
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: metadb-db-credentials
@@ -37,7 +37,7 @@ spec:
     - extract:
         key: kubeflow
 ---
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: mlpipeline-minio-artifact
@@ -56,7 +56,7 @@ spec:
     - extract:
         key: minio
 ---
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: oidc-client
