chore: just send kubeflow round 2

--- a/kubernetes/apps/kubeflow-system/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kustomization.yaml
@@ -5,4 +5,5 @@ kind: Kustomization
 namespace: kubeflow-system
 components:
   - ../../components/common
-resources: []
+resources:
+  - ./platform/ks.yaml
