feat: deploy karakeep and friends
* meilisearch
* chromium
* reactive resume

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ./bazarr/ks.yaml
   - ./calibre/ks.yaml
   - ./calibre-web/ks.yaml
+  - ./chromium/ks.yaml
   - ./cross-seed/ks.yaml
   - ./emailer/ks.yaml
   - ./flaresolverr/ks.yaml
@@ -19,9 +20,11 @@ resources:
   - ./home-assistant/ks.yaml
   - ./jellyfin/ks.yaml
   - ./jellyseerr/ks.yaml
+  - ./karakeep/ks.yaml
   - ./label-studio/ks.yaml
   - ./lidarr/ks.yaml
   - ./maintainerr/ks.yaml
+  - ./meilisearch/ks.yaml
   - ./miniflux/ks.yaml
   - ./minio/ks.yaml
   - ./plex/ks.yaml
@@ -29,6 +32,7 @@ resources:
   - ./prowlarr/ks.yaml
   - ./qbittorrent/ks.yaml
   - ./radarr/ks.yaml
+  - ./reactive-resume/ks.yaml
   - ./readarr/ks.yaml
   - ./readarr-ab/ks.yaml
   - ./recyclarr/ks.yaml
