chore: fix name

--- a/kubernetes/apps/default/meilisearch/app/helmrelease.yaml
+++ b/kubernetes/apps/default/meilisearch/app/helmrelease.yaml
@@ -19,7 +19,7 @@ spec:
       retries: 3
   values:
     controllers:
-      maintainerr:
+      meilisearch:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
