--- a/kubernetes/apps/default/karakeep/app/helmrelease.yaml
+++ b/kubernetes/apps/default/karakeep/app/helmrelease.yaml
@@ -28,13 +28,13 @@ spec:
               repository: ghcr.io/karakeep-app/karakeep
               tag: 0.23.2
             env:
-              BROWSER_WEB_URL: http://karakeep-chrome.selfhosted.svc.cluster.local:9222
+              BROWSER_WEB_URL: http://chromium.default.svc.cluster.local:9222
               CRAWLER_DOWNLOAD_BANNER_IMAGE: true
               CRAWLER_ENABLE_ADBLOCKER: true
               CRAWLER_STORE_SCREENSHOT: true
               DATA_DIR: /data
               DISABLE_SIGNUPS: true
-              MEILI_ADDR: http://karakeep-meilisearch.selfhosted.svc.cluster.local:7700
+              MEILI_ADDR: http://meilisearch.default.svc.cluster.local:7700
             envFrom:
               - secretRef:
                   name: karakeep-secret
