--- a/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
@@ -22,8 +22,8 @@ spec:
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         MAIL_FROM: "{{ .SMTP_USERNAME }}"
         SMTP_URL: "smtp://{{ .SMTP_USERNAME }}:{{ .SMTP_PASSWORD }}@{{ .SMTP_SERVER }}:587"
-        STORAGE_ENDPOINT: http://minio.default.svc.cluster.local
-        STORAGE_PORT: "9000"
+        STORAGE_ENDPOINT: http://minio.default.svc.cluster.local:9000
+        # STORAGE_PORT: "9000"
         STORAGE_BUCKET: reactive-resume
         STORAGE_USE_SSL: "false"
         STORAGE_ACCESS_KEY: "{{ .MINIO_ROOT_USER }}"
