chore: fix values

--- a/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
+++ b/kubernetes/apps/default/reactive-resume/app/externalsecret.yaml
@@ -22,7 +22,7 @@ spec:
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         MAIL_FROM: "{{ .SMTP_USERNAME }}"
         SMTP_URL: "smtp://{{ .SMTP_USERNAME }}:{{ .SMTP_PASSWORD }}@{{ .SMTP_SERVER }}:587"
-        STORAGE_ENDPOINT: http://minio.default.svc.cluster.local
+        STORAGE_ENDPOINT: http://minio.default.svc.cluster.local:9000
         STORAGE_PORT: "9000"
         STORAGE_BUCKET: reactive-resume
         STORAGE_USE_SSL: "false"
