--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -1,9 +1,9 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-  - ./upstream/example
-  - ./externalsecret.yaml
+resources: []
+  # - ./upstream/example
+  # - ./externalsecret.yaml
 # transformers:
 #   - patches/resource-requests-transformer.yaml
 # patches:
