chore: yolo kubeflow

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -1,14 +1,6 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources: []
-  # - ./upstream/example
+resources:
+  - ./upstream/example
   # - ./externalsecret.yaml
-# transformers:
-#   - patches/resource-requests-transformer.yaml
-# patches:
-  # - path: patches/remove-dex.yaml
-  # - path: patches/external-mariadb.yaml
-  # - path: patches/external-minio.yaml
-  # - path: patches/oidc-pocket-id.yaml
-  # - path: patches/cluster-issuer.yaml
