--- a/kubernetes/apps/dex/dex/app/helmrelease.yaml
+++ b/kubernetes/apps/dex/dex/app/helmrelease.yaml
@@ -13,7 +13,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: mariadb
+  name: dex
 spec:
   interval: 30m
   chart:
