--- a/kubernetes/components/common/namespace.yaml
+++ b/kubernetes/components/common/namespace.yaml
@@ -3,7 +3,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: not-used
-  labels: {}
+  labels:
+    istio-injection: disabled
   annotations:
     kustomize.toolkit.fluxcd.io/prune: disabled
     volsync.backube/privileged-movers: "true"
