--- a/kubernetes/apps/istio-ingress/istio-ingressgateway/app/helmrelease.yaml
+++ b/kubernetes/apps/istio-ingress/istio-ingressgateway/app/helmrelease.yaml
@@ -4,7 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: istio-ingressgateway
-  namespace: istio-system
+  namespace: istio-ingress
 spec:
   interval: 12h
   url: https://istio-release.storage.googleapis.com/charts
@@ -23,7 +23,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: istio-ingressgateway
-        namespace: istio-system
+        namespace: istio-ingress
   install:
     remediation:
       retries: -1
