chore: add revision to values

--- a/kubernetes/apps/istio-ingress/istio-ingressgateway/app/helmrelease.yaml
+++ b/kubernetes/apps/istio-ingress/istio-ingressgateway/app/helmrelease.yaml
@@ -33,6 +33,7 @@ spec:
       strategy: rollback
       retries: 3
   values:
+    revision: 1.24.3
     service:
       type: ClusterIP
     securityContext:
