--- a/kubernetes/apps/istio-ingress/kustomization.yaml
+++ b/kubernetes/apps/istio-ingress/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: istio-ingress
 components:
-  - ../../components/common
+  - ../../components/kubeflow
 resources:
   - ./istio-ingressgateway/ks.yaml
   - ./cluster-local-gateway/ks.yaml
