--- a/kubernetes/apps/metacontroller/metacontroller/app/helmrelease.yaml
+++ b/kubernetes/apps/metacontroller/metacontroller/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   interval: 12h
   url: oci://ghcr.io/metacontroller/metacontroller-helm
   ref:
-    tag: 2.6.1
+    tag: v2.6.1
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
