--- a/kubernetes/apps/kubeflow/argo-workflows/ks.yaml
+++ b/kubernetes/apps/kubeflow/argo-workflows/ks.yaml
@@ -8,6 +8,9 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: mariadb-cluster
+      namespace: database
   interval: 1h
   path: ./kubernetes/apps/kubeflow/argo-workflows/app
   postBuild:
@@ -22,4 +25,3 @@ spec:
   targetNamespace: *namespace
   timeout: 5m
   wait: false
-
