--- a/kubernetes/apps/default/autobrr/app/prometheusrule.yaml
+++ b/kubernetes/apps/default/autobrr/app/prometheusrule.yaml
@@ -10,7 +10,7 @@ spec:
       rules:
         - alert: AutobrrNetworkUnmonitored
           expr: |
-            autobrr_irc_channel_monitored_total == 0
+            autobrr_irc_channel_enabled_total != autobrr_irc_channel_monitored_total
           for: 5m
           annotations:
             summary: >-
