chore: fix variable

--- a/kubernetes/apps/default/karakeep/app/externalsecret.yaml
+++ b/kubernetes/apps/default/karakeep/app/externalsecret.yaml
@@ -11,11 +11,10 @@ spec:
     name: karakeep-secret
     template:
       data:
-        KARAKEEP_ENCRYPTION_KEY: "{{ .KARAKEEP_ENCRYPTION_KEY }}"
+        NEXTAUTH_SECRET: "{{ .KARAKEEP_ENCRYPTION_KEY }}"
         MEILI_MASTER_KEY: "{{ .MEILI_MASTER_KEY }}"
   dataFrom:
     - extract:
         key: karakeep
     - extract:
         key: meilisearch
-
