--- a/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
@@ -31,24 +31,24 @@ spec:
               TZ: Australia/Sydney
               QBT_WEBUI_PORT: &port 80
               QBT_TORRENTING_PORT: &torrentPort 50413
-            # probes:
-            #   liveness: &probes
-            #     enabled: true
-            #     custom: true
-            #     spec:
-            #       httpGet:
-            #         path: /api/v2/app/version
-            #         port: *port
-            #       initialDelaySeconds: 0
-            #       periodSeconds: 10
-            #       timeoutSeconds: 1
-            #       failureThreshold: 3
-            #   readiness: *probes
-            #   startup:
-            #     enabled: true
-            #     spec:
-            #       failureThreshold: 30
-            #       periodSeconds: 10
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /api/v2/app/version
+                    port: *port
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
+              startup:
+                enabled: true
+                spec:
+                  failureThreshold: 30
+                  periodSeconds: 10
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
@@ -66,7 +66,7 @@ spec:
               GITSYNC_REPO: https://github.com/VueTorrent/VueTorrent
               GITSYNC_REF: latest-release
               GITSYNC_PERIOD: 24h
-              GITSYNC_ROOT: /config
+              GITSYNC_ROOT: /ui
             resources:
               requests:
                 cpu: 10m
@@ -110,6 +110,9 @@ spec:
     persistence:
       config:
         existingClaim: qbittorrent
+      ui:
+        type: emptyDir
+        sizeLimit: 100Mi
       media:
         type: nfs
         server: nas.internal
