--- a/kubernetes/apps/default/karakeep/app/externalsecret.yaml
+++ b/kubernetes/apps/default/karakeep/app/externalsecret.yaml
@@ -13,6 +13,12 @@ spec:
       data:
         NEXTAUTH_SECRET: "{{ .KARAKEEP_ENCRYPTION_KEY }}"
         MEILI_MASTER_KEY: "{{ .MEILI_MASTER_KEY }}"
+        OAUTH_CLIENT_ID: "{{ .KARAKEEP_CLIENT_ID }}"
+        OAUTH_CLIENT_SECRET: "{{ .KARAKEEP_CLIENT_SECRET }}"
+        OAUTH_WELLKNOWN_URL: https://id.goyangi.cloud/.well-known/openid-configuration
+        OAUTH_PROVIDER_NAME: Pocket ID
+        OAUTH_ALLOW_DANGEROUS_EMAIL_ACCOUNT_LINKING: "true"
+        DISABLE_PASSWORD_AUTH: "true"
   dataFrom:
     - extract:
         key: karakeep
